fix multiselect dropdowns not overlapping
Closes #17.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -46,3 +46,10 @@ body {
 .footer > .container {
   padding: 15px 15px 0 15px;
 }
+
+/*
+ * Fix for multiselects not overlapping datetime selectors properly/
+ */
+.multiselect-container {
+  z-index: 10000;
+}
